# revenue-intelligence-platform-suite

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.pt-BR.md  README.pt-PT.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.streamlit/: secrets.example.toml
app/: streamlit_app.py
config/: data_source.yaml
dashboard/: app.py
docs/: ARCHITECTURE.md  DATA_LINEAGE.md  DATA_PROVENANCE.md  README.md  STREAMLIT_CLOUD.md  dbt-docs-publishing.md  executive-brief.md  github-profile-playbook.md  kpi-scorecard.md  proof.md  showcase-use-case.md
modules/churn-prediction/: README.md  pyproject.toml
modules/churn-prediction/app/: streamlit_app.py
modules/churn-prediction/docs/: README.en.md  README.pt-BR.md  README.pt-PT.md
modules/churn-prediction/scripts/: bump_version.py  run_pipeline.py
modules/churn-prediction/src/amazon_sales_analysis/: analytics.py  config.py  contracts.py  data_ingestion.py  data_preprocessing.py  decision_engine.py  eda.py  evaluation.py  feature_engineering.py  logging_config.py  metrics.py  modeling.py  quality.py  table_organization.py  visualization.py
modules/churn-prediction/src/churn_prediction/: __init__.py  analytics.py  config.py  contracts.py  data_ingestion.py  data_preprocessing.py  decision_engine.py  eda.py  evaluation.py  feature_engineering.py  logging_config.py  metrics.py  modeling.py  quality.py  table_organization.py  visualization.py
modules/churn-prediction/tests/: test_contracts.py  test_data_preprocessing.py  test_data_quality.py  test_decision_engine.py  test_eda_visualization.py  test_evaluation.py  test_metrics.py  test_quality.py  test_table_organization.py
platform/: __init__.py
(+122 files in other folders)
