[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-intelligence-platform"
version = "1.0.0"
description = "Unified Revenue + Retention intelligence platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Samuel Maia" }]
dependencies = [
  "pandas>=2.2",
  "duckdb>=1.1",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "streamlit>=1.33",
  "pandera>=0.20",
  "prefect>=2.18",
  "mlflow>=2.12"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "ruff>=0.4",
  "mypy>=1.10"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools.packages.find]
where = [".", "packages"]
include = [
  "common*",
  "platform*",
  "platform_connectors*",
  "platform_observability*",
]
