[project]
name = "churn-prediction"
version = "0.1.0"
description = "Business-focused churn prediction pipeline with quality gates and executive metrics."
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --cov=src/churn_prediction --cov-report=term-missing --cov-fail-under=70"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E402", "E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
exclude = ["^\\.venv/"]
